examples/big-bang-umbrella/jenkins/manifests/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    istio-injection: "enabled"
---
apiVersion: v1
kind: Namespace
metadata:
  name: helm-install-jenkins
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jenkins
  namespace: jenkins
spec:
  gateways:
    - istio-system/public
  hosts:
    - jenkins.bigbang.dev
  http:
    - route:
        - destination:
            host: jenkins.jenkins.svc.cluster.local
            port:
              number: 8080
